# memscend

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: memory-config.yaml
core/: __init__.py  app.py  exceptions.py  models.py  policies.py  security.py  services.py  utils.py
core/clients/: __init__.py  openrouter.py  tei.py
core/config/: __init__.py  loader.py  models.py
core/storage/: __init__.py  qdrant_repository.py
docs/: blueprint.md  n8n-memory-node-plan.md  prd.md  runbook.md  task_sheet.md
http_gw/: __main__.py  app.py
infra/: Dockerfile  docker-compose.yaml
infra/nginx/: nginx.conf
mcp_gw/: schemas.py  server.py
scripts/: bootstrap_qdrant.py
tests/integration/: test_http_gateway.py
tests/unit/: test_mcp_gateway.py  test_memory_core.py  test_security.py
